src/test/deca/syntax/invalid/homemade/included2.decah
// Description :
//      Included file for testing the include in another file
//
// History :
//      created on 9/01/2020

#include "included1.decah"

